--- a/client/public/shorts.html
+++ b/client/public/shorts.html
@@ -61,38 +61,16 @@
         let shorts = [];
         let currentIndex = 0;
 
-        async function fetchWithProxy(url) {
-            try {
-                // Using corsproxy.io as an alternative
-                const proxyUrl = `https://corsproxy.io/?${encodeURIComponent(url)}`;
-                const response = await fetch(proxyUrl);
-                if (!response.ok) throw new Error('Network response was not ok');
-                const data = await response.json();
-                return data;
-            } catch (err) {
-                console.error('Proxy fetch failed, trying alternative:', err);
-                try {
-                    const altProxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(url)}`;
-                    const altResponse = await fetch(altProxyUrl);
-                    const altData = await altResponse.json();
-                    return JSON.parse(altData.contents);
-                } catch (altErr) {
-                    console.error('All proxies failed:', altErr);
-                    throw altErr;
-                }
-            }
-        }
-
         async function fetchShorts() {
             try {
                 // Show skeleton or initial state
                 const container = document.getElementById('short-container');
                 container.innerHTML = '<div class="flex items-center justify-center h-screen w-full"><i class="fas fa-spinner fa-spin text-4xl text-red-600"></i></div>';
 
-                const response = await fetch('/api/dramas');
-                const result = await response.json();
-                if (result.success) {
-                    const dramas = result.data.book;
+                const res = await fetch('/api/dramas');
+                const data = await res.json();
+                if (data.success) {
+                    const dramas = data.data.book;
                     const selectedDramas = dramas.sort(() => 0.5 - Math.random()).slice(0, 15); // Load more for better buffer
                     
                     container.innerHTML = '';
@@ -101,8 +79,8 @@
                     const promises = selectedDramas.map(async (drama) => {
                         const ep = Math.floor(Math.random() * 10) + 1;
                         try {
-                            const streamResponse = await fetch(`/api/stream?bookId=${drama.id}&episode=${ep}`);
-                            const streamData = await streamResponse.json();
+                            const streamRes = await fetch(`/api/stream?bookId=${drama.id}&episode=${ep}`);
+                            const streamData = await streamRes.json();
                             if (streamData.status === "success") {
                                 return { drama, ep, url: streamData.data.chapter.video.mp4 };
                             }
@@ -219,8 +197,8 @@
             isLoadingMore = true;
             
             try {
-                const response = await fetch('/api/dramas');
-                const data = await response.json();
+                const res = await fetch('/api/dramas');
+                const data = await res.json();
                 if (data.success) {
                     const dramas = data.data.book;
                     const selectedDramas = dramas.sort(() => 0.5 - Math.random()).slice(0, 10);
@@ -228,8 +206,8 @@
                     const promises = selectedDramas.map(async (drama) => {
                         const ep = Math.floor(Math.random() * 20) + 1; // Wider range of episodes
                         try {
-                            const streamResponse = await fetch(`/api/stream?bookId=${drama.id}&episode=${ep}`);
-                            const streamData = await streamResponse.json();
+                            const streamRes = await fetch(`/api/stream?bookId=${drama.id}&episode=${ep}`);
+                            const streamData = await streamRes.json();
                             if (streamData.status === "success") {
                                 return { drama, ep, url: streamData.data.chapter.video.mp4 };
                             }
