--- a/client/public/shorts.html
+++ b/client/public/shorts.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="logo-shorts">
-        <h1 class="text-red-600 text-xl md:text-2xl font-bold tracking-tighter uppercase cursor-pointer" onclick="window.location.href='/'">ELFAR<span class="italic">BOX</span></h1>
+        <h1 class="text-red-600 text-xl md:text-2xl font-bold tracking-tighter uppercase cursor-pointer" onclick="window.location.href='/'">ELFAR<span class="italic" style="color: white;">BOX</span></h1>
     </div>
     <div class="short-container" id="short-container">
         <div class="flex items-center justify-center h-screen w-full">
