--- a/client/public/detail.html
+++ b/client/public/detail.html
@@ -51,7 +51,7 @@
             <i class="fas fa-arrow-left text-2xl"></i>
             <span class="text-xl font-bold">Kembali</span>
         </a>
-        <h1 class="text-red-600 text-xl md:text-2xl font-bold tracking-tighter uppercase cursor-pointer" onclick="window.location.href='/'">ELFAR<span class="italic">BOX</span></h1>
+        <h1 class="text-red-600 text-xl md:text-2xl font-bold tracking-tighter uppercase cursor-pointer" onclick="window.location.href='/'">ELFAR<span class="italic" style="color: white;">BOX</span></h1>
     </nav>
 
     <div id="detail-content" class="min-h-screen">
